[package]
name = "server"
description = "Exemplary real world client server built with Rust + Actix + Diesel."
categories = ["actix", "diese", "postgres"]
version = "0.1.0"
authors = ["Jarek <jareks@me.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-files = "0.5.0"
actix-web = "3.3.2"
actix-cors = "0.5.4"
actix-service = "2.0.0"
actix-http = "2.2.1"
actix-rt = "1.1.1"
blob-uuid = "0.4.0"
chrono = "0.4"
diesel = { version = "1.4.7", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15"
env_logger = "0.9.0"
failure = "0.1"
http = "0.2"
jsonwebtoken = "7.1"
lazy_static = "1.4"
libreauth = "0.14.1"
log = "0.4"
num_cpus = "1.12"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slug = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.14.0"
validator_derive = "0.14.0"
